<resources>
    <string name="app_name">GoogleSignF</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="google">Google</string>
    <string name="welcome">Welcome</string>
    <string name="default_web_client_id">288960053683-tj3i7fj0c1h72a6cceaifel5v3njpq33.apps.googleusercontent.com</string>

</resources>